--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
 streamlit
 spotipy
+spotipy.oauth2
 numpy
 librosa
 requests
-googleapiclient
+os
+tempfile
+collections
+json
+googleapiclient.discovery
+google-api-python-client
 pandas
+datetime
+threading
+urllib.parse
+pickle
+logging
 plotly
-streamlit_lottie
+plotly.graph_objs
+streamlit-lottie
