--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,178 @@
-streamlit
-spotipy
-spotipy.oauth2
-numpy
-librosa
-requests
-os
-tempfile
-collections
-json
-google-api-python-client
-googleapiclient.discovery
-pandas
-datetime
-threading
-urllib.parse
-pickle
-logging
-plotly
-plotly.graph_objs
-streamlit-lottie
+absl-py==2.1.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.6.0
+anyio==3.7.1
+async-timeout==4.0.3
+attrs==23.1.0
+audioread==3.0.1
+bard==0.1
+bardapi==0.1.33
+beautifulsoup4==4.12.2
+blinker==1.6.2
+boto3==1.24.24
+botocore==1.27.24
+browser-cookie3==0.19.1
+cachetools==4.2.4
+certifi==2022.9.24
+cffi==1.16.0
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+commonmark==0.9.1
+comtypes==1.1.14
+contourpy==1.2.1
+cycler==0.12.1
+decorator==4.4.2
+deep-translator==1.11.4
+dill==0.3.6
+dnspython==2.4.2
+email-validator==2.0.0.post2
+exceptiongroup==1.1.3
+fastapi==0.103.2
+Flask==3.0.0
+flatbuffers==24.3.25
+fonttools==4.51.0
+frozenlist==1.4.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-api-core==1.34.0
+google-api-python-client==2.125.0
+google-auth==1.35.0
+google-auth-httplib2==0.2.0
+google-cloud-core==1.7.3
+google-cloud-translate==2.0.1
+googleapis-common-protos==1.60.0
+greenlet==1.1.2
+grpcio==1.58.0
+grpcio-status==1.48.2
+gTTS==2.2.4
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.18.0
+httplib2==0.22.0
+httptools==0.6.0
+httpx==0.25.0
+hyperframe==6.0.1
+idna==3.4
+imageio==2.22.2
+imageio-ffmpeg==0.4.7
+itsdangerous==2.1.2
+jax==0.4.26
+Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.3.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+langdetect==1.0.9
+lazy_loader==0.3
+librosa==0.10.1
+llvmlite==0.42.0
+loguru==0.6.0
+lxml==4.9.1
+lz4==4.3.2
+MarkupSafe==2.1.3
+matplotlib==3.8.4
+mediapipe==0.10.11
+ml-dtypes==0.4.0
+MouseInfo==0.1.3
+moviepy==1.0.3
+msgpack==1.0.8
+multidict==6.0.4
+multiprocess==0.70.14
+numba==0.59.0
+numpy==1.23.4
+openai==0.28.0
+opencv-contrib-python==4.9.0.80
+opt-einsum==3.3.0
+orjson==3.9.8
+packaging==24.0
+pandas==2.2.1
+pathos==0.3.0
+pillow==10.3.0
+platformdirs==4.2.0
+playwright==1.23.0
+plotly==5.23.0
+pooch==1.8.1
+pox==0.3.2
+ppft==1.7.6.6
+praw==7.6.0
+prawcore==2.3.0
+proglog==0.1.10
+proto-plus==1.22.3
+protobuf==3.20.3
+pyarrow==15.0.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+PyAutoGUI==0.9.54
+pycparser==2.21
+pycryptodomex==3.19.0
+pydantic==2.4.2
+pydantic-extra-types==2.1.0
+pydantic-settings==2.0.3
+pydantic_core==2.10.1
+pydeck==0.8.1b0
+pyee==8.1.0
+PyExecJS==1.5.1
+pygame==2.3.0
+PyGetWindow==0.0.9
+Pygments==2.13.0
+PyMsgBox==1.0.9
+pyparsing==3.1.2
+pyperclip==1.8.2
+pypiwin32==223
+PyRect==0.2.0
+PyScreeze==0.1.30
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-multipart==0.0.6
+pyttsx3==2.90
+pytube==12.1.0
+pytweening==1.2.0
+pytz==2024.1
+pywin32==304
+PyYAML==6.0.1
+redis==5.0.3
+referencing==0.34.0
+requests==2.28.1
+rich==12.5.1
+rpds-py==0.18.0
+rsa==4.9
+s3transfer==0.6.0
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+sounddevice==0.4.6
+soundfile==0.12.1
+soupsieve==2.5
+soxr==0.3.7
+spotipy==2.23.0
+starlette==0.27.0
+streamlit==1.33.0
+streamlit-lottie==0.0.5
+tenacity==8.2.3
+threadpoolctl==3.3.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
+tqdm==4.64.1
+translators==5.3.1
+typing_extensions==4.8.0
+tzdata==2024.1
+ujson==5.8.0
+update-checker==0.18.0
+uritemplate==4.1.1
+urllib3==1.26.12
+uvicorn==0.23.2
+watchdog==4.0.0
+watchfiles==0.20.0
+websocket-client==1.4.1
+websockets==11.0.3
+Werkzeug==3.0.0
+win32-setctime==1.1.0
+yarl==1.9.2
