--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 -- upgrade pip -r
+python==3.7
 librosa==0.10.1
 numpy==1.23.4
 packaging==24.0
 pandas==2.2.1
 plotly==5.23.0
 requests==2.28.1
-scikit-learn==1.4.1
+scikit-learn==1.5.1
 spotipy==2.23.0
 streamlit==0.63.0
 streamlit-lottie==0.0.5
