--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-python==3.7.0
-librosa==0.10.1
+python>=3.8,<3.12
+streamlit==1.37.0
+# Other dependencies your app needs
+pytz==2024.1
+# Add other required packages herelibrosa==0.10.1
 numpy==1.23.4
 packaging==24.0
 pandas==2.2.1
@@ -7,5 +10,5 @@ plotly==5.23.0
 requests==2.28.1
 scikit-learn==1.5.1
 spotipy==2.23.0
-streamlit==0.63.0
+
 streamlit-lottie==0.0.5
